# Simulated-EpiGimp

./: CMakeLists.txt  Canvas.cpp  Canvas.h  MainWindow.cpp  MainWindow.h  README.md  canvas.cpp  canvas.h  helpdialog.cpp  helpdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  project.cpp  project.h  resources.qrc
docs/: README.md  _sidebar.md  faq.md  images.md  index.html  interface.md  layers.md  projects.md  quickstart.md  shortcuts.md  tools.md
